src/test/deca/context/invalid/variables/uncompatible_types.deca
// Description:
//    Test de verification des types comptaibles entre eux 
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur 
//    context : erreur -->  on peut pas faire des operations entre une variable de type int et de type boolean
//
// Historique:
//    cree le 13/01/2022
{
    int x = 2 ; 
    boolean  y = true  ;
    x + y ;     
    // même chose pour int + string --> erreur  
}